
syntax = "proto3";

package file;

service FileService   {
    rpc GetFileByID(GetByFileByIDRequest) returns (File) {}
    rpc GetDescendantsByID(GetDescendantsByIDRequest) returns (GetDescendantsByIDResponse) {}


}

message GetByFileByIDRequest {
  string id = 1;
}

message File {
  string id = 1;
  string key = 2;
  string name = 3;
  string type = 4;
  string description = 5;
  string ownerID = 6;
  int64 size = 7;
  oneof fileOrId {
      string parent = 8;
      File parentObject = 9;
  }
  string bucket = 10;
  int64 createdAt = 11;
  int64 updatedAt = 12;
  repeated File children = 13; 
  bool float = 14;
  string appID = 15;
}

message GetDescendantsByIDRequest {
  string id = 1;
}

message GetDescendantsByIDResponse {
  message Descendant {
    File file = 1;
    File parent = 2;
  }

  repeated Descendant descendants = 1;
}
