syntax = "proto3";

package searchService;

service Search {

    rpc search (SearchRequest) returns (SearchReply) {}
}

message SearchRequest {
  //The userID of the person who does the search.
  required string userID = 1;

  //exactMatch- which sets the type of search(relevant to the content search).
  required bool exactMatch=2;

  //The fields which contains what the user wants to search
  required MetaData fields = 3;
}

message SearchReply {

  message fileResult{

    //fileIDs- Array of Ids of the files that matched the search.
    string fileIDs = 1;

    //highlightedContent- Array of the Content that matched the content search(with highlighted words).
    string highlightedContent = 2;
  }
  
 repeated fileResult results=1;
}


  
message MetaData {
  string fileName = 1;
  string userId  = 2;
  Range createdAt = 3;
  Range updatedAt = 4;
  string type = 5;
  string content = 6;
  Owner owner = 7;
  string permissions = 8;
}

message Owner {
  string hierarchy = 1;
  string name = 2;
  string userId = 3;
}

message Range {
  int64 start = 1;
  int64 end = 2;
}